--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,11 +10,16 @@
     "import warnings\n",
     "import copy\n",
     "\n",
+    "import uuid\n",
+    "import random\n",
     "import itertools\n",
+    "\n",
+    "import networkx as nx\n",
+    "\n",
     "import math\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import networkx as nx\n",
+    "from scipy.stats import skewnorm\n",
     "\n",
     "import sys\n",
     "sys.path.insert(1, '../../scripts/')\n",
@@ -23,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LR():\n",
-    "    '''object to store metadata and relevant information for the ligan-recept dimension of tensor\n",
+    "    '''object to store metadata and relevant information for the ligan-receptor dimension of tensor\n",
     "    for internal use\n",
     "    \n",
     "    '''\n",
@@ -70,6 +75,124 @@
     "        self.fit = fit\n",
     "        self.comp = comp\n",
     "        self.p = p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight_bias(n, skew):\n",
+    "    '''\n",
+    "    n: int\n",
+    "        Number of entries to bin\n",
+    "    skew: extent to which skew binning\n",
+    "    '''\n",
+    "    unbiased = [1/n]*n\n",
+    "    if skew == 0:\n",
+    "        biased = np.array(unbiased)\n",
+    "    elif skew == 1:\n",
+    "        biased = [0]*len(unbiased)\n",
+    "        biased[-1] = 1\n",
+    "        biased = np.array(biased)\n",
+    "    else:\n",
+    "        X = np.linspace(0, len(unbiased), len(unbiased))\n",
+    "        biased = skewnorm.pdf(X, a = 1, loc = len(unbiased), scale = (1-skew/1)*len(unbiased))\n",
+    "        biased = biased/sum(biased)\n",
+    "    return biased*100\n",
+    "\n",
+    "class CCI_MD():\n",
+    "    '''Generate the CCI network for the tensor slice at time point 0'''\n",
+    "    \n",
+    "    def cci_network(self, n_cells, directional = True):\n",
+    "            '''Initialize the cell-cell interaction network.\n",
+    "\n",
+    "            n_cells: int\n",
+    "                the total number of cells to simulate; all cell-cell pairs will have a potential interaction, but only\n",
+    "                those that actually interact will have a score > 0 in the tensor slice\n",
+    "            directional: bool\n",
+    "                whether cell-cell interactions are directional (tuple of cell (A,B) indicates interaction from A-->B) or \n",
+    "                not\n",
+    "\n",
+    "            '''\n",
+    "            # generate random cell ids\n",
+    "            self.cell_ids = [str(uuid.uuid4()).split('-')[-1] for i in range(n_cells)]\n",
+    "            if directional:\n",
+    "                self.cell_interactions = list(itertools.permutations(self.cell_ids, 2))\n",
+    "            else:\n",
+    "                self.cell_interactions = list(itertools.combinations(self.cell_ids, 2))\n",
+    "    def generate_metadata(self, n_cell_cats = {2: 0}, cat_skew = 0, \n",
+    "                         remove_homotypic = None):\n",
+    "        '''Generate metadata groupings for the cells (individual) and proteins (as ligand-receptor pairs). Categories are defined as distinct types of \n",
+    "        metadata associated with the cell or protein, e.g. \"cell type\" and \"cell cycle phase\" for cells. Subcategories are\n",
+    "        the associated labels within a category, e.g. \"T-cell\" and \"dendritic cell\" within the \"cell type\" category.\n",
+    "        \n",
+    "        Note: For skew, 0 means evenly distributed, 1 means all cells fall into the first category/subcategory. \n",
+    "        \n",
+    "        n_cell_cats: dict\n",
+    "            The length of the dictionary represents the total number of categories associated with the cell\n",
+    "            Each key is an integer representing the number of subcategories for the particular category. \n",
+    "            Each value is a float [0,1] indicating the skew of distribution of cells across \n",
+    "            subcategories within each category. \n",
+    "        cat_skew: float [0,1]\n",
+    "            Skew of distribution of cells across categories\n",
+    "        remove_homotypic: int\n",
+    "            whether to remove homotypic ineractions between cells by cell category; how many categories to consider; \n",
+    "            must be <= the number of categories present in the metadata\n",
+    "\n",
+    "        '''\n",
+    "        if remove_homotypic > len(n_cell_cats):\n",
+    "            raise ValueError('The value for \"remove_homotypic\" cannot be larger than the total number of categories associated with the cells')\n",
+    "        \n",
+    "        # generate cell categories\n",
+    "        cell_categories = [str(uuid.uuid4()).split('-')[-1] for i in range(len(n_cell_cats))]\n",
+    "\n",
+    "        # group each cell into the categories above\n",
+    "        # generate categories\n",
+    "        cell_categories = [str(uuid.uuid4()).split('-')[-1] for i in range(len(n_cell_cats))]\n",
+    "        cat_bias = weight_bias(n = len(cell_categories), skew = 0)\n",
+    "        self.cell_ids = pd.DataFrame(data = {'cell_id': self.cell_ids, \n",
+    "                        'category': random.choices(population = cell_categories, weights=cat_bias, \n",
+    "                                                  k=len(self.cell_ids))})\n",
+    "        \n",
+    "        # generate subcategories\n",
+    "        self.cell_ids['subcategory'] = float('nan')\n",
+    "        i = 0\n",
+    "        for n_subcat, subcat_skew in n_cell_cats.items():\n",
+    "            sub = self.cell_ids[self.cell_ids.category == cell_categories[i]]\n",
+    "            subcat_bias = weight_bias(n = n_subcat, skew = subcat_skew)\n",
+    "            self.cell_ids.loc[sub.index, 'subcategory'] = random.choices(population = [str(uuid.uuid4()).split('-')[-1] for i in range(n_subcat)], \n",
+    "                           weights=subcat_bias, k=sub.shape[0])\n",
+    "            i += 1\n",
+    "        self.cell_metadata = self.cell_ids\n",
+    "        del self.cell_ids\n",
+    "        \n",
+    "\n",
+    "        if remove_homotypic is not None and remove_homotypic > 0: # remove homotypic interactions of a given category\n",
+    "            print('Remove homotypic cell interactions for {} categories'.format(remove_homotypic))\n",
+    "            i = 0\n",
+    "            to_remove = list()\n",
+    "            while i < remove_homotypic:\n",
+    "                cat = cell_categories[i]\n",
+    "                sub = self.cell_metadata[self.cell_metadata.category == cell_categories[i]]\n",
+    "                cell_ids = sub.cell_id.tolist()\n",
+    "\n",
+    "                for ccp in self.cell_interactions:\n",
+    "                    sub_ = sub[(sub.cell_id == ccp[0]) | (sub.cell_id == ccp[1])]\n",
+    "                    if sub_.shape[0] == 2 and sub_.subcategory.unique().shape[0] == 1:\n",
+    "                        to_remove.append(ccp)\n",
+    "\n",
+    "                i += 1\n",
+    "\n",
+    "            # remove homotypic interactions as identified above for categories 1-i\n",
+    "            self.cell_interactions = list(set(self.cell_interactions).difference(to_remove))\n",
+    "\n",
+    "            # filter out any cells that no longer are present \n",
+    "            cell_ids = list(set(sum(list(zip(*self.cell_interactions)), ())))\n",
+    "            self.cell_metadata = self.cell_metadata[self.cell_metadata.cell_id.isin(cell_ids)]\n",
+    "            self.cell_metadata.reset_index(inplace = True, drop = True)\n",
+    "\n"
    ]
   },
   {
@@ -179,31 +302,8 @@
     "        elif network_type == 'normal':\n",
     "            self.LR = LR(B, ng['1'], ng['2'], edge_list, network_type = network_type, p = params['p'])\n",
     "\n",
-    "    def tensor_slice(self, n_cells, binary = True):\n",
-    "\n",
-    "        '''Simulates a static time point tensor slice\n",
-    "        \n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        n_cells: int\n",
-    "            the total number of cells to simulate \n",
-    "        binary: bool\n",
-    "            whether L-R scores are binary or continuous b/w [0,1]\n",
-    "        \n",
-    "        Returns\n",
-    "        -------\n",
-    "        self.ts: pd.DataFrame\n",
-    "            matrix with cell network_type pairs as columns, ligand-receptor pairs as rows, scores as entries\n",
-    "        '''\n",
-    "        \n",
-    "        # TO DO: \n",
-    "        # first separate into groupings/metadata covariates?\n",
-    "        # generate biased distributions of LR scores\n",
-    "        self.ts = pd.DataFrame(columns = list(itertools.combinations(range(n_cells), 2)), index = self.LR.edge_list)\n",
-    "        \n",
-    "        \n",
     "    def emulate_sf_network(self, G):\n",
-    "        '''Emulate a user-provided network\n",
+    "        '''Emulate a user-provided (recommended scale-free) network for L-R pair tensors dimension\n",
     "        \n",
     "        Parameters\n",
     "        ----------\n",
@@ -229,13 +329,36 @@
     "        G2 = G2['nx']\n",
     "        gg.drop_disconnected_nodes(G2)\n",
     "        return G2\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def tensor_slice_t0(self, binary = True):\n",
+    "\n",
+    "        '''Simulates a static time point tensor slice\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        binary: bool\n",
+    "            whether L-R scores are binary or continuous b/w [0,1]\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        self.ts: pd.DataFrame\n",
+    "            matrix with cell network_type pairs as columns, ligand-receptor pairs as rows, scores as entries\n",
+    "        '''\n",
+    "        \n",
+    "        # TO DO: \n",
+    "        # first separate into groupings/metadata covariates?\n",
+    "        # generate biased distributions of LR scores\n",
+    "        self.ts = pd.DataFrame(columns = list(itertools.combinations(range(n_cells), 2)), index = self.LR.edge_list)\n",
+    "        \n",
     "    def copy(self):\n",
     "        return copy.deepcopy(self)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmp3sbrks9__bipartite_sf.csv\n",
+      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmpqrip2ql3_bipartite_sf.csv\n",
       "Generate undirected, bipartite, scale-free graph\n",
       "Check network properties\n",
       "All properties are as expected\n"
@@ -263,9 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../../scripts/simulation/graphs.py:157: UserWarning: 8 nodes are disconnected, removing from network\n",
-      "  warnings.warn(mssg)\n",
-      "../../scripts/simulation/graphs.py:157: UserWarning: 1 nodes are disconnected, removing from network\n",
+      "../../scripts/simulation/graphs.py:164: UserWarning: 9 nodes are disconnected, removing from network\n",
       "  warnings.warn(mssg)\n"
      ]
     }
@@ -275,10 +396,39 @@
     "sim_sf = Simulate() \n",
     "sim_norm = Simulate()\n",
     "\n",
-    "# simulate a randomly connected ligand-receptor network\n",
+    "# simulate a randomly connected ligand-receptor network (potential interactions)\n",
     "sim_sf.LR_network(network_type = 'scale-free', **{'nodes': 10, 'degrees': 1, 'alpha': 2}) #scale-free\n",
-    "sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 10, 'n_receptors': 5, 'p': 0.5}) # normally distributed"
+    "sim_norm.LR_network(network_type = 'normal', **{'n_ligands': 10, 'n_receptors': 5, 'p': 0.5}) # normally distributed\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cell metadata\n",
+    "cci = CCI_MD()\n",
+    "cci.cci_network(n_cells = 100, directional = False)\n",
+    "cci.generate_metadata(n_cell_cats = {2: 0, 3: 0.3}, cat_skew = 0, remove_homotypic = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remove homotypic cell interactions for 1 categories\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
