Reshape method to input to tensor-cell2cell

--- a/notebooks/simulation/simulate.ipynb
+++ b/notebooks/simulation/simulate.ipynb
@@ -22,13 +22,16 @@
     "import uuid\n",
     "import random\n",
     "from tqdm import tqdm\n",
+    "from tqdm import trange\n",
     "\n",
     "import networkx as nx\n",
     "\n",
-    "import itertools\n",
-    "import math\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import tensorly\n",
+    "\n",
+    "import math\n",
+    "import itertools\n",
     "from scipy.stats import skewnorm\n",
     "\n",
     "import sys\n",
@@ -229,7 +232,39 @@
     "            # filter out any cells that no longer are present \n",
     "            cell_ids = list(set(sum(list(zip(*self.cell_interactions)), ())))\n",
     "            self.cell_metadata = self.cell_metadata[self.cell_metadata.cell_id.isin(cell_ids)]\n",
-    "            self.cell_metadata.reset_index(inplace = True, drop = True)"
+    "            self.cell_metadata.reset_index(inplace = True, drop = True)\n",
+    "\n",
+    "class sim_tensor():\n",
+    "    '''Class to consolidate and store all label information for the input of tensor-cell2cell'''\n",
+    "    def __init__(self, tensor_cci, conditions, lr_labels, senders, receivers, \n",
+    "                lr_metadata, cell_metadata, cell_lr_metadata):\n",
+    "        '''\n",
+    "        tensor_cci: tensorly.tensor\n",
+    "            A tensor formatted in the method needed to run the tensor-cell2cell pipeline\n",
+    "        conditions: list\n",
+    "            label for the conditions, defines first dimension of tensor\n",
+    "        lr_labels: list \n",
+    "            label for the LR labels, defines the second dimension of tensor\n",
+    "        sender: list\n",
+    "            label for sender cells, defines the third dimension of the tensor\n",
+    "        receiver: list\n",
+    "            label for sender cells, defines the fourth dimension of the tensor\n",
+    "        lr_metadata: pd.DataFrame\n",
+    "            metadata associated with the ligand-receptor pairs\n",
+    "        cell_metadata: pd.DataFrame\n",
+    "            metadata associated with the cells\n",
+    "        cell_lr_metadata: pd.DataFrame\n",
+    "            metadata associated with the expected groups of CC-LR categories that are expected to have patterns of \n",
+    "            interaction\n",
+    "        '''\n",
+    "        self.tensor_cci = tensor_cci\n",
+    "        self.conditions = conditions\n",
+    "        self.lr_labels = lr_labels\n",
+    "        self.senders = senders\n",
+    "        self.receivers = receivers\n",
+    "        \n",
+    "        self.lr_metadata = lr_metadata\n",
+    "        self.cell_metadata = cell_metadata"
    ]
   },
   {
@@ -455,21 +490,28 @@
     "            alongside the expected average score for each condition\n",
     "        '''\n",
     "        #checks------------------------------------------------------------------------------------------------\n",
-    "        if n_conditions <=2:\n",
-    "            warnings.warn('At least 4 conditions are required')\n",
-    "            n_conditions = 3\n",
-    "        self.n_conditions = n_conditions\n",
-    "        \n",
     "        allowed_patterns = ['pulse', 'linear', 'oscillate']\n",
     "        if patterns is not None:\n",
     "            if len(set(patterns).difference(allowed_patterns)) > 0:\n",
     "                raise ValueError('Patterns can only include: ' + ', '.join(allowed_patterns))\n",
     "        else:\n",
-    "            patterns = allowed_patterns        \n",
+    "            patterns = allowed_patterns \n",
+    "        \n",
+    "        if n_conditions == 2 and set(['oscillate', 'pulse']).difference(patterns): \n",
+    "            warnings.warn('At least 3 conditions are required for oscillations or pulses, only linear patterns will be considered')\n",
+    "            patterns = ['linear']\n",
+    "        if n_conditions <= 1:\n",
+    "            warnings.warn('No conditions specified, only a tensor slice will be generated')\n",
+    "            if n_conditions == 0:\n",
+    "                n_conditions = 1\n",
+    "        \n",
+    "        self.n_conditions = n_conditions\n",
+    "        \n",
+    "       \n",
     "        #------------------------------------------------------------------------------------------------\n",
     "        \n",
     "        n_lr_cat = len(self.LR.LR_metadata.subcategory.unique())\n",
-    "        n_cc_cat = len(self.LR.LR_metadata.subcategory.unique())\n",
+    "        n_cc_cat = len(self.cci.cell_metadata.subcategory.unique())\n",
     "    \n",
     "        # all possible groups that have patterns of expression\n",
     "\n",
@@ -584,90 +626,49 @@
     "                self.ts[cond].values[coords] = avg_val if noise == 0 else \\\n",
     "                                          utils.get_truncated_normal(n = len(coords[0]), sd = noise*avg_val, mean = avg_val)\n",
     "\n",
+    "    def reshape(self):\n",
+    "        '''Creates tensor in the format necessary for running with tensor-cell2cell and stores \n",
+    "        as a sim_tensor object under self.sim_tensor\n",
     "        \n",
-    "#     def _generate_t0(self, noise, binary):\n",
-    "#         '''Generate tensor slice 0. See tensor_slice_t0 method for agrument descriptions'''\n",
-    "#         # initialize\n",
-    "#         self.ts0 = pd.DataFrame(columns = self.cci.cell_interactions, index = self.LR.edge_list)\n",
+    "        Formatting:\n",
+    "        - communication matrix: a matrix of sender by receiver cells for a given LR pair\n",
+    "        - 3D tensor: each slice is a communication matrix, the full tensor is all slices for all LR pairs\n",
+    "        - final tensor: each slice is the 3D tensor, the full tensor is all slices for all conditions\n",
+    "        '''\n",
+    "        senders = sorted(set([i[0] for i in self.cci.cell_interactions]))\n",
+    "        receivers = sorted(set([i[1] for i in self.cci.cell_interactions]))\n",
     "\n",
-    "#         #------------------------------------------------------------------------------------------\n",
     "\n",
-    "        \n",
+    "        # map CC coordinates in CC-LR matrix to .iloc coordinates for fast filling of \"communication\" matrix\n",
+    "        tcs_coords = dict()\n",
+    "        for coord_i, cell_i in enumerate(senders):\n",
+    "            for coord_j, cell_j in enumerate(receivers):\n",
+    "                tcs_coords[(cell_i,cell_j)] = (coord_i, coord_j)\n",
     "\n",
-    "#         # background\n",
-    "#         if noise == 0:\n",
-    "#             self.ts0.fillna(0, inplace = True)\n",
-    "#         else:\n",
-    "#             if not binary: # generate background noise values\n",
-    "#                 # noise values increase with noise, and have a maximum average of self.clrm['mean'].min()\n",
-    "#                 scale = self.clrm['mean'].min()/np.array([utils.piecewise_fit(self.clrm['mean'].min(), *utils.fit_params)])[0]\n",
-    "#                 vals = utils.get_truncated_normal(n = self.ts0.shape[0]*self.ts0.shape[1], \n",
-    "#                                                   sd = noise*self.clrm['mean'].min(), mean = 0)*scale\n",
-    "#                 self.ts0[:] = vals.reshape(self.ts0.shape)\n",
-    "#             else:\n",
-    "#                 raise ValueError('Binary situations not yet dealt with')\n",
-    "#         #        freq = np.mean([abs(i) if abs(i) <= 1 else 1 for i in np.random.normal(loc = 0, scale = noise*0.33, size = 10**5)])\n",
-    "#         #                 background_coord_noise = random.sample(background_coord, k = int(round(freq*len(background_coord))))\n",
-    "#         #                 for coord in background_coord_noise:\n",
-    "#         #                     self.ts0.iloc[coord] = 1\n",
+    "        coords = [tcs_coords[col] for col in self.ts_frame.columns]\n",
+    "        coords = [tuple([i[0] for i in coords]), tuple([i[1] for i in coords])]\n",
     "\n",
-    "#         #------------------------------------------------------------------------------------------\n",
+    "        tcs_ = np.full([len(senders),len(receivers)], np.nan)\n",
     "\n",
-    "#         # add CCI values by cell-LR metadata pairs\n",
-    "#         for i in self.clrm.index:\n",
-    "#             avg_val = self.clrm.loc[i, 'mean']\n",
-    "#             coords = self.clrm.loc[i, 'ts_coordinates']\n",
-    "#             if not binary: \n",
-    "#                 self.ts0.values[coords] = avg_val if noise == 0 else \\\n",
-    "#                                           utils.get_truncated_normal(n = len(coords[0]), sd = noise*avg_val, mean = avg_val)\n",
-    "#             else:\n",
-    "#                 raise ValueError('Binary situations not yet dealt with')\n",
-    "#         #         adj_coord = random.sample(coords, int(round(len(coords)*self.clrm.loc[i, 'mean'])))\n",
-    "#         #         for coord in adj_coord:\n",
-    "#         #             self.ts0.iloc[coord] = 1\n",
-    "#         #         if noise > 0:\n",
-    "#         #             cm = {0:1, 1:0}\n",
-    "#         #             change_coords = random.sample(coords, int(round(len(coords)*self.clrm.loc[i, 'mean']*noise*0.5)))\n",
-    "#         #             for coord in change_coords:\n",
-    "#         #                 self.ts0.iloc[coord] = cm[self.ts0.iloc[coord]]\n",
-    "    \n",
-    "#     def tensor_slice_t0(self, noise = 0, n_patterns = 2, binary = False):\n",
+    "        tensor_list = list()\n",
+    "        print('Generate reshaped tensor')\n",
+    "        for cond in tqdm(self.ts):\n",
+    "            tcs_list = list()\n",
+    "            ts = self.ts_frame.copy()\n",
+    "            ts[:] = self.ts[cond].values # assign values for specific condition in a CC-LR matrix\n",
+    "            for idx in range(self.ts_frame.shape[0]):\n",
+    "                tcs = tcs_.copy() # generate a \"communication\" matrix and fill with each row of the CC-LR matrix\n",
+    "                tcs[coords] = ts.iloc[idx,:].values\n",
+    "                tcs_list.append(tcs)\n",
+    "            tensor_list.append(tensorly.tensor(tcs_list))\n",
+    "        tensor_cci = tensorly.tensor(tensor_list)\n",
+    "        del tensor_list\n",
     "\n",
-    "#         '''Simulates a static time point tensor slice\n",
-    "        \n",
-    "#         *Note, in current format, only one cell-cell metadata subcategory can have an interaction pattern \n",
-    "#         ie, can't combine multiple cell-cell pairs to have the same pattern\n",
-    "        \n",
-    "#         Parameters\n",
-    "#         ----------\n",
-    "#         n_patterns: int (> 0)\n",
-    "#             the number of cell metadata - LR metadata pairs for which to form distinct interactions \n",
-    "#             the remainder will default to 0, with noise increasing this value\n",
-    "#             the groups with distinct interactions will each have distincts values\n",
-    "#             recommended to set decomposition rank = n_patterns\n",
-    "#         binary: bool\n",
-    "#             whether L-R scores are binary or continuous b/w [0,1]\n",
-    "#         noise: float [0,1]\n",
-    "#             the amount of noise to add to the data\n",
-    "#             as noise increases, the fraction of noisy cc-lr coordinates increases, as does the change in value of the interaction, and the standard deviation if non-continuous\n",
-    "        \n",
-    "#         Returns\n",
-    "#         -------\n",
-    "#         self.ts0: pd.DataFrame\n",
-    "#             matrix with cell network_type pairs as columns, ligand-receptor pairs as rows, scores as entries\n",
-    "#         '''\n",
-    "        \n",
-    "#         if sim.cci is None or type(sim.cci) != CCI_MD:\n",
-    "#             raise ValueError('Make sure to generate cell-cell network and metadata with the CCI_MD() class')\n",
-    "#         if noise > 1 or noise < 0: \n",
-    "#             raise ValueError('Noise must be between 0 and 1')\n",
-    "#         if type(binary) is not bool:\n",
-    "#             raise ValueError('binary arg must be boolean')\n",
-    "        \n",
-    "#         # by separating into two methods, can test different values of noise without changing category pairings\n",
-    "#         self._generate_clrm(n_patterns = n_patterns)\n",
-    "#         self._generate_t0(noise = noise, binary = binary)\n",
-    "            \n",
+    "        # store in a sim_tensor object\n",
+    "        self.sim_tensor = sim_tensor(tensor_cci, conditions = list(self.ts.keys()), \n",
+    "                                     lr_labels = self.ts_frame.index.tolist(), senders = senders, receivers = receivers, \n",
+    "                                    lr_metadata = self.LR.LR_metadata, cell_metadata = self.cci.cell_metadata, \n",
+    "                                     cell_lr_metadata = self.clrm.drop(columns=['ts_coordinates']))\n",
     "    def copy(self):\n",
     "        return copy.deepcopy(self)"
    ]
@@ -681,7 +682,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmp_57_bao7_bipartite_sf.csv\n",
+      "/home/hratch/Projects/cci_dt/notebooks/simulation/tmphmft8xin_bipartite_sf.csv\n",
       "Generate undirected, bipartite, scale-free graph\n",
       "Check network properties\n",
       "All properties are as expected\n"
@@ -691,22 +692,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../../scripts/simulation/graphs.py:164: UserWarning: 998 nodes are disconnected, removing from network\n",
-      "  warnings.warn(mssg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Remove homotypic cell interactions for 1 categories\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:320: UserWarning: Only continuous scoring is currently implemented\n",
+      "../../scripts/simulation/graphs.py:164: UserWarning: 987 nodes are disconnected, removing from network\n",
+      "  warnings.warn(mssg)\n",
+      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:327: UserWarning: Only continuous scoring is currently implemented\n",
       "  0%|          | 0/12 [00:00<?, ?it/s]"
      ]
     },
@@ -721,9 +709,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 12/12 [00:05<00:00,  2.30it/s]\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:345: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "100%|██████████| 12/12 [00:00<00:00, 267.40it/s]\n"
+      "100%|██████████| 12/12 [00:17<00:00,  1.49s/it]\n",
+      "  0%|          | 0/12 [00:00<?, ?it/s]/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:352: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "100%|██████████| 12/12 [00:00<00:00, 213.58it/s]\n",
+      "  0%|          | 0/12 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generate reshaped tensor\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hratch/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:380: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "100%|██████████| 12/12 [00:26<00:00,  2.20s/it]\n"
      ]
     }
    ],
@@ -741,11 +745,13 @@
     "# LR metadata\n",
     "sim.LR.generate_metadata(n_LR_cats = {3: 0}, cat_skew = 0)\n",
     "\n",
-    "# cell metadata\n",
+    "# generate cell metadata, considering directionality (senders vs receivers)\n",
     "cci = CCI_MD()\n",
-    "cci.cci_network(n_cells = 50, directional = False)\n",
+    "cci.cci_network(n_cells = 50, directional = True)\n",
+    "\n",
     "# generate 1 metadata categories, with 3 subcategories and 0 skew, the overall skew of categories is 0\n",
-    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 1)\n",
+    "# do not remove homotypic interactions\n",
+    "cci.generate_metadata(n_cell_cats = {3: 0}, cat_skew = 0, remove_homotypic = 0)\n",
     "# add metadata to simulation object\n",
     "sim.cci = cci\n",
     "\n",
@@ -753,35 +759,12 @@
     "# these changes can either be linear, oscillating, or a pulse\n",
     "sim.generate_tensor_md(n_patterns = 4, n_conditions = 12, patterns = ['pulse', 'linear', 'oscillate'])\n",
     "\n",
-    "#generate a t0 tensor slice with continuous LR scores and baseline noise\n",
+    "#generate a tensor with continuous LR scores and baseline noise\n",
     "sim.generate_tensor(noise = 0.05, binary = False)\n",
     "\n",
-    "\n"
+    "# format the tensor to be input to tensor-cell2cell\n",
+    "sim.reshape()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sender are rows, receivers are columns, each slice of the 3d tense is a LR pair, \n",
-    "4d tensor is condition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
